Compiler/tests/good/Output/11_output.rs
// Single line comment
fn main(){
  print!(true);
  return;
}
