Compiler/tests/bad/Functions/01_function.rs
// wrong condition type

fn main(){
    add();

    return;
}